{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 305,
  "lineage": "7bcccb41-929f-2caf-89d0-2d25d036188a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aegon-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2d756e7d78558d",
            "arn": "arn:aws:ec2:eu-west-1:869918154786:instance/i-094d823af0e17e028",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094d823af0e17e028",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "application-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02085afe6db2b56d4",
            "private_dns": "ip-10-0-1-183.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "public_ip": "34.242.135.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d22c4efd380a0347",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3b3206aefb31233",
            "tags": {
              "Name": "Aegon-VM"
            },
            "tags_all": {
              "Name": "Aegon-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00dcefab2323810fe"
            ]
          },
          "dependencies": [
            "aws_key_pair.app_ssh",
            "aws_security_group.allow-ssh",
            "aws_subnet.public-1a",
            "aws_vpc.Aurion-VPC",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:869918154786:internet-gateway/igw-0d5f4ddd6f471e124",
            "id": "igw-0d5f4ddd6f471e124",
            "owner_id": "869918154786",
            "tags": {
              "Name": "Aurion-IGW"
            },
            "tags_all": {
              "Name": "Aurion-IGW"
            },
            "vpc_id": "vpc-03b4808470bc91d93"
          },
          "dependencies": [
            "aws_vpc.Aurion-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2c9a17819124067",
            "original_route_table_id": "rtb-0c72190353c53112e",
            "route_table_id": "rtb-0372ea1ae04b6a1c2",
            "vpc_id": "vpc-03b4808470bc91d93"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-route",
            "aws_vpc.Aurion-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:869918154786:route-table/rtb-0372ea1ae04b6a1c2",
            "id": "rtb-0372ea1ae04b6a1c2",
            "owner_id": "869918154786",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5f4ddd6f471e124",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b4808470bc91d93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Aurion-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:869918154786:security-group/sg-00dcefab2323810fe",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all - outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dcefab2323810fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.239.18.216/32"
                ],
                "description": "Allow port 22 - inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "869918154786",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b4808470bc91d93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Aurion-VPC",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:869918154786:subnet/subnet-0eb6785d1a3fc4df3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb6785d1a3fc4df3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869918154786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-1a"
            },
            "tags_all": {
              "Name": "Private-1a"
            },
            "vpc_id": "vpc-03b4808470bc91d93"
          },
          "dependencies": [
            "aws_vpc.Aurion-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:869918154786:subnet/subnet-0d3b3206aefb31233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3b3206aefb31233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869918154786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-1a"
            },
            "tags_all": {
              "Name": "Public-1a"
            },
            "vpc_id": "vpc-03b4808470bc91d93"
          },
          "dependencies": [
            "aws_vpc.Aurion-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Aurion-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:869918154786:vpc/vpc-03b4808470bc91d93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fae5f9c4cf7a81f",
            "default_route_table_id": "rtb-0c72190353c53112e",
            "default_security_group_id": "sg-0e3d1cabccaf6c97c",
            "dhcp_options_id": "dopt-024a9639a31a8a0ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03b4808470bc91d93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c72190353c53112e",
            "owner_id": "869918154786",
            "tags": {
              "Name": "Aurion-VPC"
            },
            "tags_all": {
              "Name": "Aurion-VPC"
            }
          }
        }
      ]
    }
  ]
}